[gd_scene load_steps=18 format=3 uid="uid://cds1m3xicyc4k"]

[ext_resource type="Script" path="res://Scripts/Scene2.gd" id="1_u37sd"]
[ext_resource type="PackedScene" uid="uid://d4f7fxjs2wh7n" path="res://MainMenu.tscn" id="2_1nm7i"]
[ext_resource type="Texture2D" uid="uid://mt3yeqbvs3oy" path="res://assets/bg2.jpg" id="2_bnxce"]
[ext_resource type="PackedScene" uid="uid://cw4xeegs5b2fq" path="res://Character/main_character.tscn" id="3_cxomv"]
[ext_resource type="PackedScene" uid="uid://cvbrehpsiggb1" path="res://Objects/fire.tscn" id="4_ut5jx"]
[ext_resource type="PackedScene" uid="uid://bkjboqn4xwl7m" path="res://Camera/Camera.tscn" id="7_mjdd4"]
[ext_resource type="PackedScene" uid="uid://y1eekky3cxs7" path="res://Inventory/items/puzzle_vidriera/item_vidrio5.tscn" id="9_1gput"]
[ext_resource type="AudioStream" uid="uid://cx0jnns63mbi6" path="res://assets/sounds/Scene2.mp3" id="9_cus1p"]
[ext_resource type="PackedScene" uid="uid://v1vc4mhxkmf2" path="res://Inventory/items/puzzle_vidriera/item_vidrio1.tscn" id="9_qtg1b"]
[ext_resource type="PackedScene" uid="uid://br2xxid8seypw" path="res://Character/npc_2.tscn" id="11_sqnlr"]
[ext_resource type="PackedScene" uid="uid://cnqdsj1751ca0" path="res://Puzzles/Maximon/Nodos/altar_maximon.tscn" id="12_e4h1v"]
[ext_resource type="PackedScene" uid="uid://di3seule2il8t" path="res://Puzzles/Maximon/Nodos/puzzle_maximon.tscn" id="12_lsjrf"]
[ext_resource type="PackedScene" uid="uid://qthrn4s7717a" path="res://Puzzles/Maximon/Nodos/door.tscn" id="14_8727e"]
[ext_resource type="PackedScene" uid="uid://bhohlaadrlnsi" path="res://Puzzles/Jardin/Nodos/puzzle_stone.tscn" id="14_wdsdp"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_sxo74"]
vertices = PackedVector2Array(856, 261, 895, 287, 882, 313, 789, 275, 750, 230, 187, 375, 121, 339, 157, 327, 878, 71, 962, 99, 906, 158, 799, 178, 861, 228, 568, 231, 454, 97, 521, 67, 673, 214, 658, 232, 274, 366, 191, 309, 254, 332, 335, 155, 281, 139, 250, 98, 276, 79, 374, 110, 391, 128, 351, 181, 404, 160, 428, 255, 460, 181, 514, 243, 490, 368, 438, 303, 540, 243, 539, 278, 525, 316, 984, 405, 1060, 480, 961, 516, 925, 416, 901, 325, 1332, 452, 1367, 455, 1367, 479, 1313, 516, 1287, 469, 1156, 509, 1255, 447, 328, 333, 371, 302, 398, 284, 413, 301, 415, 363, 341, 378, 237, 295, 580, 338, 665, 331, 664, 364, 754, 333, 822, 366, 1046, 436, 1103, 400, 1142, 389, 1256, 431)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(11, 10, 12, 4), PackedInt32Array(13, 14, 15, 16, 17), PackedInt32Array(18, 5, 7, 19, 20), PackedInt32Array(21, 22, 23, 24, 25, 26), PackedInt32Array(27, 21, 26, 28, 29), PackedInt32Array(29, 28, 30, 31), PackedInt32Array(32, 33, 29, 31, 34, 35, 36), PackedInt32Array(37, 38, 39, 40, 41), PackedInt32Array(4, 12, 0), PackedInt32Array(4, 3, 17, 16), PackedInt32Array(13, 17, 35, 34), PackedInt32Array(42, 43, 44, 45, 46), PackedInt32Array(46, 45, 47, 48), PackedInt32Array(49, 50, 51, 52, 53, 54), PackedInt32Array(19, 55, 20), PackedInt32Array(18, 20, 49, 54), PackedInt32Array(53, 52, 33, 32), PackedInt32Array(56, 36, 35, 57, 58), PackedInt32Array(59, 58, 57, 3), PackedInt32Array(60, 59, 3, 2), PackedInt32Array(40, 60, 2, 41), PackedInt32Array(38, 37, 61), PackedInt32Array(47, 38, 61, 62, 63, 64, 48)])
outlines = Array[PackedVector2Array]([PackedVector2Array(454, 97, 568, 231, 540, 243, 514, 243, 460, 181, 404, 160, 391, 128, 374, 110, 276, 79, 250, 98, 281, 139, 335, 155, 351, 181, 428, 255, 438, 303, 413, 301, 398, 284, 371, 302, 328, 333, 254, 332, 237, 295, 191, 309, 157, 327, 121, 339, 187, 375, 274, 366, 341, 378, 415, 363, 490, 368, 525, 316, 580, 338, 664, 364, 754, 333, 822, 366, 925, 416, 961, 516, 1060, 480, 1156, 509, 1313, 516, 1367, 479, 1367, 455, 1332, 452, 1287, 469, 1255, 447, 1256, 431, 1142, 389, 1103, 400, 1046, 436, 984, 405, 901, 325, 882, 313, 895, 287, 856, 261, 861, 228, 906, 158, 962, 99, 878, 71, 799, 178, 750, 230, 673, 214, 521, 67), PackedVector2Array(665, 331, 789, 275, 658, 232, 539, 278)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2j5c"]
size = Vector2(112.592, 27.5359)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m4k7"]
size = Vector2(72, 27)

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_u37sd")
PauseMenu = ExtResource("2_1nm7i")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(1.26953, 1.26953)
texture = ExtResource("2_bnxce")

[node name="Collect" type="Node2D" parent="."]
y_sort_enabled = true

[node name="ItemVidrio1" parent="Collect" instance=ExtResource("9_qtg1b")]
y_sort_enabled = true
offset_left = -612.0
offset_top = -224.0
offset_right = -532.0
offset_bottom = -144.0

[node name="ItemVidrio5" parent="Collect" instance=ExtResource("9_1gput")]
y_sort_enabled = true
offset_left = -334.0
offset_top = -172.0
offset_right = -254.0
offset_bottom = -92.0
scale = Vector2(0.5, 0.5)

[node name="MainCharacter" parent="." instance=ExtResource("3_cxomv")]
position = Vector2(-450, 109)
scale = Vector2(0.9, 0.9)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
y_sort_enabled = true
position = Vector2(-811, -239)
navigation_polygon = SubResource("NavigationPolygon_sxo74")

[node name="Node2D" type="Node2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(-693, -321)

[node name="Fire" parent="Node2D" instance=ExtResource("4_ut5jx")]
position = Vector2(537, 407)
scale = Vector2(1.65, 1.65)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-693, -323)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(847, 69)
rotation = 0.314159
shape = SubResource("RectangleShape2D_c2j5c")

[node name="Camera" parent="." node_paths=PackedStringArray("character") instance=ExtResource("7_mjdd4")]
limit_left = -690
limit_top = -350
limit_right = 690
limit_bottom = 350
editor_draw_limits = true
character = NodePath("../MainCharacter")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 1
stream = ExtResource("9_cus1p")
autoplay = true
bus = &"music"

[node name="AreaToScena1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToScena1"]
position = Vector2(-655, 121)
rotation = 0.502655
shape = SubResource("RectangleShape2D_7m4k7")

[node name="NPC2" parent="." node_paths=PackedStringArray("mainchar") instance=ExtResource("11_sqnlr")]
position = Vector2(89, -165)
scale = Vector2(0.8, 0.8)
mainchar = NodePath("../MainCharacter")

[node name="PuzzleMaximon" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Puzzle_maximon" parent="PuzzleMaximon" node_paths=PackedStringArray("character") instance=ExtResource("12_lsjrf")]
character = NodePath("../../MainCharacter")

[node name="AltarMaximon" parent="PuzzleMaximon" node_paths=PackedStringArray("puzzle", "npc") instance=ExtResource("12_e4h1v")]
y_sort_enabled = true
position = Vector2(-148, -7)
scale = Vector2(0.5, 0.5)
puzzle = NodePath("../Puzzle_maximon")
npc = NodePath("../../NPC2")

[node name="Door" parent="PuzzleMaximon" node_paths=PackedStringArray("puzzle") instance=ExtResource("14_8727e")]
position = Vector2(330, 82)
puzzle = NodePath("../Puzzle_maximon")

[node name="Puzzle__Jardin" type="Node2D" parent="."]
y_sort_enabled = true

[node name="puzzle_stone" parent="Puzzle__Jardin" instance=ExtResource("14_wdsdp")]
position = Vector2(478, 154)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="AreaToScena1" to="." method="_on_area_to_scena_1_body_entered"]
